# camacq-plugins

./: .all-contributorsrc  .copier-answers.yml  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  RELEASE.md  pylintrc  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_lint.txt  requirements_test.txt  setup.cfg  setup.py  tox.ini
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: 1-bug-report.yml  2-feature-request.yml  config.yml
.github/workflows/: ci.yml  generate-changelog.yml  test.yml
camacqplugins/: __init__.py
camacqplugins/gain/: README.md  __init__.py
camacqplugins/production/: README.md  __init__.py
config_templates/: gain.yml  production.yml
scripts/: debug.py  setup_tests.py
src/camacqplugins/: __init__.py
src/camacqplugins/gain/: README.md  __init__.py
src/camacqplugins/production/: README.md  __init__.py
tests/: common.py  conftest.py
tests/gain/: __init__.py  test_gain.py
tests/production/: __init__.py  test_production.py
