[build-system]
build-backend = "setuptools.build_meta"
requires = [ "setuptools>=77.0.3" ]

[project]
name = "camacq-plugins"
version = "0.4.0"
description = "Plugins for camacq"
readme = "README.md"
license = "Apache-2.0"
authors = [
  { name = "Martin Hjelmare", email = "marhje52@gmail.com" },
]
requires-python = ">=3.12"
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Science/Research",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering :: Interface Engine/Protocol Translator",
]
dependencies = [
  "camacq>=0.8",
  "matplotlib",
  "pandas",
  "scipy",
  "tifffile",
]
urls."Bug Tracker" = "https://github.com/CellProfiling/camacq-plugins/issues"
urls.Changelog = "https://github.com/CellProfiling/camacq-plugins/blob/main/CHANGELOG.md"
urls.repository = "https://github.com/CellProfiling/camacq-plugins"
entry-points."camacq.plugins".gain = "camacqplugins.gain"
entry-points."camacq.plugins".production = "camacqplugins.production"

[dependency-groups]
dev = [
  "codespell==2.4.2",
  "copier==9.14.1",
  "mypy==1.19.1",
  "pandas-stubs==3.0.0.260204",
  "pre-commit==4.5.1",
  "pytest==9.0.2",
  "pytest-asyncio==1.3.0",
  "pytest-cov==7.1.0",
  "python-semantic-release>=10,<11",
  "ruff==0.15.8",
  "scipy-stubs==1.17.1.3",
]

[tool.ruff]
line-length = 88
lint.select = [
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "D",   # flake8-docstrings
  "E",   # pycodestyle
  "F",   # pyflake
  "I",   # isort
  "RUF", # ruff specific
  "S",   # flake8-bandit
  "UP",  # pyupgrade
  "W",   # pycodestyle
]
lint.ignore = [
  "D203", # 1 blank line required before class docstring
  "D213", # Multi-line docstring summary should start at the second line
]
lint.per-file-ignores."conftest.py" = [ "D100" ]
lint.per-file-ignores."setup.py" = [ "D100" ]
lint.per-file-ignores."tests/**/*" = [
  "S101",
]
lint.isort.force-sort-within-sections = true
lint.isort.known-first-party = [ "camacqplugins", "tests" ]

[tool.pyproject-fmt]
keep_full_version = true
max_supported_python = "3.14"

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
mypy_path = "src/"
no_implicit_optional = true
show_error_codes = true
warn_unreachable = true
warn_unused_ignores = true
exclude = [
  "setup.py",
]
overrides = [
  { module = "tests.*", allow_untyped_defs = true },
]

[tool.pytest]
minversion = "9.0"
addopts = [
  "-Wonce",
  "--cov=camacqplugins",
  "--cov-report=term",
  "--cov-report=xml",
]
asyncio_default_fixture_loop_scope = "function"
asyncio_mode = "auto"
pythonpath = [ "src" ]

[tool.coverage]
run.branch = true
paths.source = [
  "src",
  ".tox/**/site-packages",
]
report.exclude_lines = [
  "@overload",
  "def __repr__",
  'if __name__ == "__main__":',
  "if TYPE_CHECKING",
  "pragma: no cover",
  "raise NotImplementedError",
]

[tool.semantic_release]
allow_zero_version = true
version_toml = [ "pyproject.toml:project.version" ]
version_variables = [
  "src/camacqplugins/__init__.py:__version__",
]
build_command = """
pip install uv
uv lock
git add uv.lock
uv build
"""
branches.main.match = "main"
branches.noop.match = "(?!main$)"
branches.noop.prerelease = true
changelog.exclude_commit_patterns = [
  "chore(?:\\([^)]*?\\))?: .+",
  "ci(?:\\([^)]*?\\))?: .+",
  "refactor(?:\\([^)]*?\\))?: .+",
  "style(?:\\([^)]*?\\))?: .+",
  "test(?:\\([^)]*?\\))?: .+",
  "build\\((?!deps\\): .+)",
  "Merged? .*",
  "Initial [Cc]ommit.*",         # codespell:ignore
]
changelog.mode = "update"
changelog.environment.keep_trailing_newline = true
major_on_zero = false
commit_parser_options.parse_squash_commits = false
